--- a/TourList.html
+++ b/TourList.html
@@ -228,7 +228,7 @@
   
     <h1 class="noibat">| Tour Nổi Bật Nước Ngoài |</h1>
     <div class="noidung">
-      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+      <div id="TourNuocNgoai" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
       
@@ -386,11 +386,11 @@
 
     </div>
   </div>
-     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+     <a class="carousel-control-prev" href="#TourNuocNgoai" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
-  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+  <a class="carousel-control-next" href="#TourNuocNgoai" role="button" data-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
