--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/png" href="./img/logoWeb.svg"/>
+    <link rel="shortcut icon" type="image/png" href="./img/iconWebStar.png"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/styles-index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -220,7 +220,7 @@
             <button type="button" data-bs-target="#carouselSlideImg" data-bs-slide-to="1" aria-label="Slide 2"></button>
             <button type="button" data-bs-target="#carouselSlideImg" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
-        <!-- slide img height: 50vw-->
+        <!-- slide img-->
         <div class="carousel-inner" style="height: 100vh;">
             <div class="carousel-item active h-100">
                 <img src="./img/lamvien.jpg" class="d-block w-100 h-100 zoom-img img-fit" alt="image">
@@ -594,8 +594,8 @@
             <!-- Giam gia -->
             <div class="col d-flex justify-content-center">
                 <button class="btn btn-warning form-check rounded-0 p-0 w-100 h-100 justify-content-center">
-                    <input class="form-check-input ms-4 me-3" type="checkbox" value="" id="giamGia">
-                    <label class="form-check-label pb-2 pt-2 pe-5" for="giamGia">
+                    <input class="form-check-input ms-4" type="checkbox" value="" id="giamGia">
+                    <label class="form-check-label pe-2 pb-2 pt-2 me-1" for="giamGia">
                         Giảm Giá
                     </label>
                 </button>
