--- a/index.html
+++ b/index.html
@@ -615,82 +615,94 @@
         <p class="mb-5 fst-italic text-danger text-uppercase">kiểm tra tour phù hợp và mua ngay</p>
         <div class="row row-cols-1 row-cols-md-3 g-6">
             <div class="col mb-4">
-                <div id="card-1" class="card h-100 hover-zoom">
-                    <img src="./img/l1.png" class="card-img-top" alt="...">
-                    <div class="card-body bg-opacity-100">
-                        <h5 class="card-title">Paris - Pháp</h5>
-                        <p class="card-text pt-2">Du lịch Pháp 7 ngày ở Paris Giá tốt nhất 2022.</p>
-                        <p><strike style="font-size: 13px;">35,000,000<sup>&#8363;</sup></strike> <b style="color:red;">30,000,000<sup>&#8363;</sup></b></p>
+                <a style="text-decoration: none; color: black;" href="./page_index_tour/Index-Tour1.html">
+                    <div id="card-1" class="card h-100 hover-zoom">
+                        <img src="./img/l1.png" class="card-img-top" alt="...">
+                        <div class="card-body bg-opacity-100">
+                            <h5 class="card-title">Paris - Pháp</h5>
+                            <p class="card-text pt-2">Du lịch Pháp 7 ngày ở Paris Giá tốt nhất 2022.</p>
+                            <p><strike style="font-size: 13px;">35,000,000<sup>&#8363;</sup></strike> <b style="color:red;">30,000,000<sup>&#8363;</sup></b></p>
+                        </div>
+                        <div class="card-footer">
+                            <p class="text-muted">Date: 22/10/2022</p>
+                        </div>
                     </div>
-                    <div class="card-footer">
-                        <p class="text-muted">Date: 22/10/2022</p>
-                    </div>
-                </div>
+                </a>
             </div>
             <div class="col mb-4">
-                <div class="card h-100 hover-zoom">
-                    <img src="./img/l2.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Vịnh Hạ Long - Việt Nam</h5>
-                        <p class="card-text pt-2">Du lịch Vịnh Hạ Long 3 ngày ở Việt Nam Giá tốt nhất 2022.</p>
-                        <p><strike style="font-size: 13px;">15,000,000<sup>&#8363;</sup></strike> <b style="color:red;">8,000,000<sup>&#8363;</sup></b></p>
+                <a style="text-decoration: none; color: black;" href="./page_index_tour/Index-Tour2.html">
+                    <div class="card h-100 hover-zoom">
+                        <img src="./img/l2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Vịnh Hạ Long - Việt Nam</h5>
+                            <p class="card-text pt-2">Du lịch Vịnh Hạ Long 3 ngày ở Việt Nam Giá tốt nhất 2022.</p>
+                            <p><strike style="font-size: 13px;">15,000,000<sup>&#8363;</sup></strike> <b style="color:red;">8,000,000<sup>&#8363;</sup></b></p>
+                        </div>
+                        <div class="card-footer">
+                            <p class="text-muted">Date: 23/10/2022</p>
+                        </div>
                     </div>
-                    <div class="card-footer">
-                        <p class="text-muted">Date: 23/10/2022</p>
-                    </div>
-                </div>
+                </a>
             </div>
             <div class="col mb-4">
-                <div class="card h-100 hover-zoom">
-                    <img src="./img/l3.jpg" class="card-img-top" alt="image">
-                    <div class="card-body">
-                        <h5 class="card-title">BangKok - Thái Lan</h5>
-                        <p class="card-text pt-2">Du lịch BangKok 14 ngày tại Thái Lan Giá tốt nhất cùng các dịch vụ ưu đãi đặc biệt 2022.</p>
-                        <p><strike style="font-size: 13px;">25,000,000<sup>&#8363;</sup></strike> <b style="color:red;">20,000,000<sup>&#8363;</sup></b></p>
+                <a style="text-decoration: none; color: black;" href="./page_index_tour/Index-Tour3.html">
+                    <div class="card h-100 hover-zoom">
+                        <img src="./img/l3.jpg" class="card-img-top" alt="image">
+                        <div class="card-body">
+                            <h5 class="card-title">BangKok - Thái Lan</h5>
+                            <p class="card-text pt-2">Du lịch BangKok 14 ngày tại Thái Lan Giá tốt nhất cùng các dịch vụ ưu đãi đặc biệt 2022.</p>
+                            <p><strike style="font-size: 13px;">25,000,000<sup>&#8363;</sup></strike> <b style="color:red;">20,000,000<sup>&#8363;</sup></b></p>
+                        </div>
+                        <div class="card-footer">
+                            <p class="text-muted">Date: 21/10/2022</p>
+                        </div>
                     </div>
-                    <div class="card-footer">
-                        <p class="text-muted">Date: 21/10/2022</p>
-                    </div>
-                </div>
+                </a>
             </div>
             <div class="col mb-4">
-                <div class="card h-100 hover-zoom">
-                    <img src="./img/l4.jpg" class="card-img-top" alt="image">
-                    <div class="card-body">
-                        <h5 class="card-title">Tokyo - Nhật Bản</h5>
-                        <p class="card-text pt-2">Du lịch Nhật Bản 30 ngày tại Tokyo Giá tốt nhất 2022.</p>
-                        <p><strike style="font-size: 13px;">35,000,000<sup>&#8363;</sup></strike> <b style="color:red;">30,000,000<sup>&#8363;</sup></b></p>
+                <a style="text-decoration: none; color: black;" href="./page_index_tour/Index-Tour4.html">
+                    <div class="card h-100 hover-zoom">
+                        <img src="./img/l4.jpg" class="card-img-top" alt="image">
+                        <div class="card-body">
+                            <h5 class="card-title">Tokyo - Nhật Bản</h5>
+                            <p class="card-text pt-2">Du lịch Nhật Bản 30 ngày tại Tokyo Giá tốt nhất 2022.</p>
+                            <p><strike style="font-size: 13px;">35,000,000<sup>&#8363;</sup></strike> <b style="color:red;">30,000,000<sup>&#8363;</sup></b></p>
+                        </div>
+                        <div class="card-footer">
+                            <p class="text-muted">Date: 22/12/2022</p>
+                        </div>
                     </div>
-                    <div class="card-footer">
-                        <p class="text-muted">Date: 22/12/2022</p>
-                    </div>
-                </div>
+                </a>
             </div>
             <div class="col mb-4">
-                <div class="card h-100 hover-zoom">
-                    <img src="./img/l5.png" class="card-img-top" alt="image">
-                    <div class="card-body">
-                        <h5 class="card-title">USA - Mỹ</h5>
-                        <p class="card-text">Du Lịch Mỹ 21 ngày tại Atlanta giá tốt nhất 2022 cùng các dịch vụ ưu đãi bậc nhất.</p>
-                        <p><strike style="font-size: 13px;">45,000,000<sup>&#8363;</sup></strike> <b style="color:red;">42,000,000<sup>&#8363;</sup></b></p>
+                <a style="text-decoration: none; color: black;" href="./page_index_tour/Index-Tour5.html">
+                    <div class="card h-100 hover-zoom">
+                        <img src="./img/l5.png" class="card-img-top" alt="image">
+                        <div class="card-body">
+                            <h5 class="card-title">USA - Mỹ</h5>
+                            <p class="card-text">Du Lịch Mỹ 21 ngày tại Atlanta giá tốt nhất 2022 cùng các dịch vụ ưu đãi bậc nhất.</p>
+                            <p><strike style="font-size: 13px;">45,000,000<sup>&#8363;</sup></strike> <b style="color:red;">42,000,000<sup>&#8363;</sup></b></p>
+                        </div>
+                        <div class="card-footer">
+                            <p class="text-muted">Date: 22/08/2022</p>
+                        </div>
                     </div>
-                    <div class="card-footer">
-                        <p class="text-muted">Date: 22/08/2022</p>
-                    </div>
-                </div>
+                </a>
             </div>
             <div class="col mb-4">
-                <div class="card h-100 hover-zoom">
-                    <img src="./img/l6.png" class="card-img-top" alt="image">
-                    <div class="card-body">
-                        <h5 class="card-title">Rusia - Nga</h5>
-                        <p class="card-text">Du Lịch Nga 7 ngày tại Moscow giá tốt nhất 2022 cùng các quà tặng hấp dẫn.</p>
-                        <p><strike style="font-size: 13px;">45,000,000<sup>&#8363;</sup></strike> <b style="color:red;">32,000,000<sup>&#8363;</sup></b></p>
+                <a style="text-decoration: none; color: black;" href="./page_index_tour/Index-Tour6.html">
+                    <div class="card h-100 hover-zoom">
+                        <img src="./img/l6.png" class="card-img-top" alt="image">
+                        <div class="card-body">
+                            <h5 class="card-title">Rusia - Nga</h5>
+                            <p class="card-text">Du Lịch Nga 7 ngày tại Moscow giá tốt nhất 2022 cùng các quà tặng hấp dẫn.</p>
+                            <p><strike style="font-size: 13px;">45,000,000<sup>&#8363;</sup></strike> <b style="color:red;">32,000,000<sup>&#8363;</sup></b></p>
+                        </div>
+                        <div class="card-footer">
+                            <p class="text-muted">Date: 22/12/2022</p>
+                        </div>
                     </div>
-                    <div class="card-footer">
-                        <p class="text-muted">Date: 22/12/2022</p>
-                    </div>
-                </div>
+                </a>
             </div>
         </div>
     </div>
@@ -796,48 +808,60 @@
             <p class="text-warning">Tin mới nhất và các ưu đãi nổi bật</p>
         </div>
         <div id="list-img-news" class="">
-            <div class="imgV bg-info" style="width: 100%; height: 400px;">
-                <img src="./img/l1.png" class="w-100 h-100 img-fit blur-img"/>
-                <div class="text-img-voucher text-black bg--gra pt-3 pb-3" style="display: none;">
-                    <h3>France - Paris</h3>
-                    <p><strike style="font-size: 13px;">40,000,000<sup>&#8363;</sup></strike> <b style="color:red;">30,000,000<sup>&#8363;</sup></b></p>
+            <a style="text-decoration: none; color: black;" href="./page_index_tour/Index-Tour1.html">
+                <div class="imgV bg-info" style="width: 100%; height: 400px;">
+                    <img src="./img/l1.png" class="w-100 h-100 img-fit blur-img"/>
+                    <div class="text-img-voucher text-black bg--gra pt-3 pb-3" style="display: none;">
+                        <h3>France - Paris</h3>
+                        <p><strike style="font-size: 13px;">40,000,000<sup>&#8363;</sup></strike> <b style="color:red;">30,000,000<sup>&#8363;</sup></b></p>
+                    </div>
                 </div>
-            </div>
-            <div class="imgV bg-info" style="width: 100%; height: 400px;">
-                <img src="./img/l2.png" class="w-100 h-100 img-fit blur-img"/>
-                <div class="text-img-voucher text-black bg--gra pt-3 pb-3" style="display: none;">
-                    <h3>Vịnh Hạ Long</h3>
-                    <p><strike style="font-size: 13px;">25,000,000<sup>&#8363;</sup></strike> <b style="color:red;">15,000,000<sup>&#8363;</sup></b></p>
+            </a>
+            <a style="text-decoration: none; color: black;" href="./page_index_tour/Index-Tour2.html">
+                <div class="imgV bg-info" style="width: 100%; height: 400px;">
+                    <img src="./img/l2.png" class="w-100 h-100 img-fit blur-img"/>
+                    <div class="text-img-voucher text-black bg--gra pt-3 pb-3" style="display: none;">
+                        <h3>Vịnh Hạ Long</h3>
+                        <p><strike style="font-size: 13px;">25,000,000<sup>&#8363;</sup></strike> <b style="color:red;">15,000,000<sup>&#8363;</sup></b></p>
+                    </div>
                 </div>
-            </div>
-            <div class="imgV bg-info" style="width: 100%; height: 400px;">
-                <img src="./img/l3.jpg" class="w-100 h-100 img-fit blur-img"/>
-                <div class="text-img-voucher text-black bg--gra pt-3 pb-3" style="display: none;">
-                    <h3>ThaiLand</h3>
-                    <p><strike style="font-size: 13px;">35,000,000<sup>&#8363;</sup></strike> <b style="color:red;">32,000,000<sup>&#8363;</sup></b></p>
+            </a>
+            <a style="text-decoration: none; color: black;" href="./page_index_tour/Index-Tour3.html">
+                <div class="imgV bg-info" style="width: 100%; height: 400px;">
+                    <img src="./img/l3.jpg" class="w-100 h-100 img-fit blur-img"/>
+                    <div class="text-img-voucher text-black bg--gra pt-3 pb-3" style="display: none;">
+                        <h3>ThaiLand</h3>
+                        <p><strike style="font-size: 13px;">35,000,000<sup>&#8363;</sup></strike> <b style="color:red;">32,000,000<sup>&#8363;</sup></b></p>
+                    </div>
                 </div>
-            </div>
-            <div class="imgV bg-info" style="width: 100%; height: 400px;">
-                <img src="./img/l4.jpg" class="w-100 h-100 img-fit blur-img"/>
-                <div class="text-img-voucher text-black bg--gra pt-3 pb-3" style="display: none;">
-                    <h3>Japan - Tokyo</h3>
-                    <p><strike style="font-size: 13px;">35,000,000<sup>&#8363;</sup></strike> <b style="color:red;">30,000,000<sup>&#8363;</sup></b></p>
+            </a>
+            <a style="text-decoration: none; color: black;" href="./page_index_tour/Index-Tour4.html">
+                <div class="imgV bg-info" style="width: 100%; height: 400px;">
+                    <img src="./img/l4.jpg" class="w-100 h-100 img-fit blur-img"/>
+                    <div class="text-img-voucher text-black bg--gra pt-3 pb-3" style="display: none;">
+                        <h3>Japan - Tokyo</h3>
+                        <p><strike style="font-size: 13px;">35,000,000<sup>&#8363;</sup></strike> <b style="color:red;">30,000,000<sup>&#8363;</sup></b></p>
+                    </div>
                 </div>
-            </div>
-            <div class="imgV bg-info" style="width: 100%; height: 400px;">
-                <img src="./img/l5.png" class="w-100 h-100 img-fit blur-img"/>
-                <div class="text-img-voucher text-black bg--gra pt-3 pb-3" style="display: none;">
-                    <h3>USA - Atlanta</h3>
-                    <p><strike style="font-size: 13px;">45,000,000<sup>&#8363;</sup></strike> <b style="color:red;">20,000,000<sup>&#8363;</sup></b></p>
+            </a>
+            <a style="text-decoration: none; color: black;" href="./page_index_tour/Index-Tour5.html">
+                <div class="imgV bg-info" style="width: 100%; height: 400px;">
+                    <img src="./img/l5.png" class="w-100 h-100 img-fit blur-img"/>
+                    <div class="text-img-voucher text-black bg--gra pt-3 pb-3" style="display: none;">
+                        <h3>USA - Atlanta</h3>
+                        <p><strike style="font-size: 13px;">45,000,000<sup>&#8363;</sup></strike> <b style="color:red;">20,000,000<sup>&#8363;</sup></b></p>
+                    </div>
                 </div>
-            </div>
-            <div class="imgV bg-info" style="width: 100%; height: 400px;">
-                <img src="./img/l6.png" class="w-100 h-100 img-fit blur-img"/>
-                <div class="text-img-voucher text-black bg--gra pt-3 pb-3" style="display: none;">
-                    <h3>Rusia - Coscow</h3>
-                    <p><strike style="font-size: 13px;">35,000,000<sup>&#8363;</sup></strike> <b style="color:red;">30,000,000<sup>&#8363;</sup></b></p>
+            </a>
+            <a style="text-decoration: none; color: black;" href="./page_index_tour/Index-Tour6.html">
+                <div class="imgV bg-info" style="width: 100%; height: 400px;">
+                    <img src="./img/l6.png" class="w-100 h-100 img-fit blur-img"/>
+                    <div class="text-img-voucher text-black bg--gra pt-3 pb-3" style="display: none;">
+                        <h3>Rusia - Coscow</h3>
+                        <p><strike style="font-size: 13px;">35,000,000<sup>&#8363;</sup></strike> <b style="color:red;">30,000,000<sup>&#8363;</sup></b></p>
+                    </div>
                 </div>
-            </div>
+            </a>
         </div>
     </div>
 
