--- a/introduce.html
+++ b/introduce.html
@@ -10,8 +10,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="./assets/css/introduce.css">
-    <link rel="stylesheet" href="./assets/js/introduce.js">
+    <link rel="stylesheet" type="text/css" href="assets/css/introduce.css">
+    <link rel="stylesheet" href="assets/js/introduce.js">
 
 
   </head>
@@ -21,76 +21,90 @@
 
         <div class="container-fluid" id="heading" >
           <div id="logo">
-            <img src="./assets/img/logoWeb.png" width="120" height="100" class="img-fluid" >
+            <img src="assets/img/logoWeb.png" width="120" height="100" class="img-fluid" >
           </div>
-          <nav class="navbar navbar-expand-sm" id="menu" >
-              <ul class="navbar-nav m-auto">
-                <li class="nav-item">
-                  <a class="nav-link" href="./index.html">TRANG CHỦ</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./introduce.html">GIỚI THIỆU</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="./TourTrongNuoc.html" role="button" data-bs-toggle="dropdown">TOUR TRONG NƯỚC</a>
-                  <ul class="dropdown-menu ">
-                    <li class="dropdown-item dropend">
-                      <a class="dropdown-item " href="#"role="button" data-bs-toggle="dropdown">MIỀN BẮC</a>
-                      <ul class="dropdown-menu">
-                        <a class="dropdown-item" href="#">TOUR THÁI LAN</a>
-                        <a class="dropdown-item" href="#">TOUR THỔ NHĨ KỲ</a>
-                        <a class="dropdown-item" href="#">TOUR DUBAI</a>
-                      </ul>
-                    </li>
-                    <li class="dropdown-item dropend">
-                      <a class="dropdown-item " href="#"role="button" data-bs-toggle="dropdown">MIỀN NAM</a>
-                      <ul class="dropdown-menu">
-                        <a class="dropdown-item" href="#">TOUR TÂY NINH</a>
-                        <a class="dropdown-item" href="#">TOUR CÔN ĐẢO</a>
-                        <a class="dropdown-item" href="#">TOUR PHÚ QUỐC</a>
-                        <a class="dropdown-item" href="#">TOUR VĨNH LONG</a>
-                      </ul>
-                    </li>
-                    <li class="dropdown-item dropend">
-                      <a class="dropdown-item " href="#"role="button" data-bs-toggle="dropdown">MIỀN TRUNG</a>
-                      <ul class="dropdown-menu">
-                        <a class="dropdown-item " href="#">TOUR PHAN THIẾT</a>
-                        <a class="dropdown-item" href="#">TOUR ĐÀ LẠT</a>
-                        <a class="dropdown-item" href="#">TOUR TÂY NGUYÊN</a>
-                        <a class="dropdown-item" href="#">TOUR QUY NHƠN</a>
-                        <a class="dropdown-item" href="#">TOUR NHA TRANG</a>
-                        <a class="dropdown-item" href="#">TOUR NGHỆ AN</a>                
-                      </ul>
-                    </li>              
-                  </ul>
-                </li>
-                <li class="nav-item dropdown">
-                  <a id="tour-out" class="nav-link dropdown-toggle" href="./TourNuocNgoai.html" role="button" data-bs-toggle="dropdown">TOUR NƯỚC NGOÀI</a>
+          <nav class="navbar navbar-expand-md" id="menu" >
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#navbarOffcanvasLg" aria-controls="navbarOffcanvasLg">
+              <span class="bi bi-grid-3x3-gap-fill"></span>
+            </button>
+            <div class="offcanvas offcanvas-end" tabindex="-1" id="navbarOffcanvasLg" aria-labelledby="navbarOffcanvasLgLabel">
+              <div class="offcanvas-header">
+                <div id="logo">
+                  <img src="assets/img/logoWeb.png" width="100" height="80" class="img-fluid" >
+                </div>                
+                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close" style="color: #fff;"></button>
+              </div>
+              <div class="offcanvas-body">
+                <ul class="navbar-nav ">
+                  <li class="nav-item">
+                    <a class="nav-link" href="./index.html">TRANG CHỦ</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./introduce.html">GIỚI THIỆU</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="./TourTrongNuoc.html" role="button" data-bs-toggle="dropdown">TOUR TRONG NƯỚC</a>
                     <ul class="dropdown-menu ">
-                      <a class="dropdown-item" href="#">TOUR THÁI LAN</a>
-                      <a class="dropdown-item" href="#">TOUR THỔ NHĨ KỲ</a>
-                      <a class="dropdown-item" href="#">TOUR DUBAI</a>
-                      <a class="dropdown-item" href="#">TOUR MALDIVES</a>
-                      <a class="dropdown-item" href="#">TOUR PHÁP</a>
-                      <a class="dropdown-item" href="#">TOUR CAMPUCHIA</a>
-                      <a class="dropdown-item" href="#">TOUR SINGAPORE</a>
-                      <a class="dropdown-item" href="#">TOUR INDONESIA</a>
+                      <li class="dropdown-item dropend">
+                        <a class="dropdown-item " href="./TourTrongNuoc.html"role="button" data-bs-toggle="dropdown">MIỀN BẮC</a>
+                        <ul class="dropdown-menu">
+                          <a class="dropdown-item" href="./TourTrongNuoc.html">TOUR THÁI LAN</a>
+                          <a class="dropdown-item" href="./TourTrongNuoc.html">TOUR THỔ NHĨ KỲ</a>
+                          <a class="dropdown-item" href="./TourTrongNuoc.html">TOUR DUBAI</a>
+                        </ul>
+                      </li>
+                      <li class="dropdown-item dropend">
+                        <a class="dropdown-item " href="./TourTrongNuoc.html"role="button" data-bs-toggle="dropdown">MIỀN NAM</a>
+                        <ul class="dropdown-menu">
+                          <a class="dropdown-item" href="./TourTrongNuoc.html">TOUR TÂY NINH</a>
+                          <a class="dropdown-item" href="./TourTrongNuoc.html">TOUR CÔN ĐẢO</a>
+                          <a class="dropdown-item" href="./TourTrongNuoc.html">TOUR PHÚ QUỐC</a>
+                          <a class="dropdown-item" href="./TourTrongNuoc.html">TOUR VĨNH LONG</a>
+                        </ul>
+                      </li>
+                      <li class="dropdown-item dropend">
+                        <a class="dropdown-item " href="./TourTrongNuoc.html"role="button" data-bs-toggle="dropdown">MIỀN TRUNG</a>
+                        <ul class="dropdown-menu">
+                          <a class="dropdown-item " href="./TourTrongNuoc.html">TOUR PHAN THIẾT</a>
+                          <a class="dropdown-item" href="./TourTrongNuoc.html">TOUR ĐÀ LẠT</a>
+                          <a class="dropdown-item" href="./TourTrongNuoc.html">TOUR TÂY NGUYÊN</a>
+                          <a class="dropdown-item" href="./TourTrongNuoc.html">TOUR QUY NHƠN</a>
+                          <a class="dropdown-item" href="./TourTrongNuoc.html">TOUR NHA TRANG</a>
+                          <a class="dropdown-item" href="./TourTrongNuoc.html">TOUR NGHỆ AN</a>                
+                        </ul>
+                      </li>              
                     </ul>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./News.html">TIN TỨC</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./contact.html">LIÊN HỆ</a>
-                </li>
-                <li class="nav-item">
-                  <a href="#" class="nav-link"><i class="bi bi-search " style="color: #fff;" ></i></a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a id="tour-out" class="nav-link dropdown-toggle" href="./TourNuocNgoai.html" role="button" data-bs-toggle="dropdown">TOUR NƯỚC NGOÀI</a>
+                      <ul class="dropdown-menu ">
+                        <a class="dropdown-item" href="./TourNuocNgoai.html">TOUR THÁI LAN</a>
+                        <a class="dropdown-item" href="./TourNuocNgoai.html">TOUR THỔ NHĨ KỲ</a>
+                        <a class="dropdown-item" href="./TourNuocNgoai.html">TOUR DUBAI</a>
+                        <a class="dropdown-item" href="./TourNuocNgoai.html">TOUR MALDIVES</a>
+                        <a class="dropdown-item" href="./TourNuocNgoai.html">TOUR PHÁP</a>
+                        <a class="dropdown-item" href="./TourNuocNgoai.html">TOUR CAMPUCHIA</a>
+                        <a class="dropdown-item" href="./TourNuocNgoai.html">TOUR SINGAPORE</a>
+                        <a class="dropdown-item" href="./TourNuocNgoai.html">TOUR INDONESIA</a>
+                      </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./News.html">TIN TỨC</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./contact.html">LIÊN HỆ</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="#" class="nav-link"><i class="bi bi-search " style="color: #fff;" ></i></a>
+  
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" id="log-in" href="./Login.html">ĐĂNG NHẬP</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
 
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" id="log-in" href="./Login.html">ĐĂNG NHẬP</a>
-                </li>
-              </ul>
           </nav>
       </div>
       </header>
@@ -107,21 +121,21 @@
             </div>
             <div class="carousel-inner" style="height: 500px;">
               <div class="carousel-item active">
-                <img src="./assets/img/footer1.jpg" class="d-block w-100 h-100" alt="...">
+                <img src="assets/img/footer5.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>First slide label</h5>
                   <p>Some representative placeholder content for the first slide.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="./assets/img/footer2.jpg" class="d-block w-100" alt="...">
+                <img src="assets/img/footer2.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Second slide label</h5>
                   <p>Some representative placeholder content for the second slide.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="./assets/img/footer3.jpg" class="d-block w-100" alt="...">
+                <img src="assets/img/footer3.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Third slide label</h5>
                   <p>Some representative placeholder content for the third slide.</p>
@@ -138,9 +152,10 @@
             </button>
           </div>
         </div>
-        <div class="main-content bg-light" id="main-content" style="height: 350px;">
+        <div class="main-content bg-light" id="main-content">
           <div class="row row-lg h-100" style="text-align: center; align-items: center;">
-            <div class="col-4">
+            <div style="padding: 30px"> </div>
+            <div class="col-md-4 col-xs-4" style="padding-bottom: 30px;">
               <div class="content-text">
                 <h3>Mục Tiêu</h3>
                 <p>
@@ -150,7 +165,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-4">
+            <div class="col-md-4 col-xs-4" style="padding-bottom: 15px;">
               <div class="content-text">
                 <h3>Sứ Mệnh</h3>
                 <p>
@@ -160,7 +175,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-4">
+            <div class="col-md-4 col-xs-4" style="padding-bottom: 15px;">
               <div class="content-text">
                 <h3>Tương Lai</h3>
                 <p>
@@ -182,8 +197,8 @@
 
           <div class="row row-lg " id="ft-row1">
             <!-- cot email -->
-            <div class="col-4 px-4">
-              <img src="./assets/img/footer1.jpg" alt="abc" width="150px">
+            <div class="col-md-4 col-xs-4 px-4">
+              <img src="assets/img/footer1.jpg" alt="abc" width="150px">
               <div class="input-group mb-3">
                 <label for="exampleFormControlInput1" class="form-label">Đăng ký để không bỏ lỡ bất cứ ưu đãi nào</label>
                 <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Email của bạn"  aria-describedby="button-addon1">
@@ -191,12 +206,12 @@
               </div>
             </div>
             <!-- cot icon -->
-            <div class="col-4 px-4">
+            <div class="col-md-4 col-xs-4 px-4">
               <h4 style="text-transform: capitalize; font-size: 22px;">Liên hệ</h4>
               <div class="row">
                 <div class="col-2">
                   <div class="ft-icon">
-                    <i class="bi bi-geo-alt white bg-light" style="font-size: 20px;"></i>
+                    <i class="bi bi-geo-alt" style="font-size: 20px; color: #fff;"></i>
                   </div>
                 </div>
                 <div class="col-10">
@@ -207,13 +222,13 @@
               </div>
               <div class="row">
                 <div class="col-2">
-                  <div class="ft-icon">
-                    <i class="bi bi-telephone-fill white bg-light" style="font-size: 20px;"></i>
+                    <div class="ft-icon">
+                      <i class="bi bi-telephone-fill" style="font-size: 20px; color: #fff;"></i>
                   </div>
                 </div>
                 <div class="col-10">
                   <div class="ft-text">
-                    <a href="tel:1900636648" style="color: #fff; text-decoration: none;">
+                    <a href="tel:1900636648" style="color: #fff; text-decoration: none;color: #fff">
                       <span >tel:1900636648</span>
                     </a>
                   </div>                 
@@ -222,7 +237,7 @@
               <div class="row">
                 <div class="col-2">
                   <div class="ft-icon">
-                    <i class="bi bi-envelope white bg-light" style="font-size: 20px;"></i>
+                    <i class="bi bi-envelope " style="font-size: 20px;color: #fff;"></i>
                   </div>
                 </div>
                 <div class="col-10">
@@ -237,47 +252,47 @@
               <div style="padding-top: 30px;"></div>
               <div class="row row-lg">
                 <div class="social-media">
-                  <a href="facebook.com"><i class="bi bi-facebook white bg-light" style="font-size: 30px"></i></a>
-                  <a href="instagram.com"><i class="bi bi-instagram white bg-light" style="font-size: 30px;"></i></a>
-                  <a href="google.com"><i class="bi bi-google white bg-light" style="font-size: 30px"></i></a>
-                  <a href="youtube.com"><i class="bi bi-youtube white bg-light" style="font-size: 30px"></i></a>
+                  <a href="facebook.com"><i class="bi bi-facebook" style="font-size: 30px; color: #fff;padding-right: 10px;"></i></a>
+                  <a href="instagram.com"><i class="bi bi-instagram" style="font-size: 30px;color: #fff;padding-right: 10px;"></i></a>
+                  <a href="google.com"><i class="bi bi-google " style="font-size: 30px; color: #fff;padding-right: 10px;"></i></a>
+                  <a href="youtube.com"><i class="bi bi-youtube " style="font-size: 30px; color: #fff;padding-right: 10px;"></i></a>
                 </div>
               </div>
             </div>
             <!-- cot anh -->
-            <div class="col-4 px-4">
+            <div class="col-md-4 col-xs-4 px-4">
               <h4 style="text-transform: capitalize; font-size: 22px;">Tour phổ biến</h4>
               <div class="row row-lg ft-box-img">
                 <div class="col col-4">
-                  <a href="#"><img src="./assets/img/footer1.jpg" class="img-fluid" alt="" style="width: 80px;"></a>
+                  <a href="#"><img src="assets/img/footer1.jpg" class="img-fluid" alt="" style="width: 80px;"></a>
                 </div>
                 <div class="col col-4">
-                  <a href="#"><img src="./assets/img/footer2.jpg" class="img-fluid" alt=""></a>
+                  <a href="#"><img src="assets/img/footer2.jpg" class="img-fluid" alt=""></a>
                 </div>
                 <div class="col col-4">
-                  <a href="#"><img src="./assets/img/footer3.jpg" class="img-fluid" alt=""></a>
+                  <a href="#"><img src="assets/img/footer3.jpg" class="img-fluid" alt=""></a>
                 </div>
               </div>
               <div class="row row-lg ft-box-img">
                 <div class="col col-4">
-                  <a href="#"><img src="./assets/img/footer4.jpg" class="img-fluid" alt=""></a>
+                  <a href="#"><img src="assets/img/footer4.jpg" class="img-fluid" alt=""></a>
                 </div>
                 <div class="col col-4">
-                  <a href="#"><img src="./assets/img/footer5.jpg" class="img-fluid" alt=""></a>
+                  <a href="#"><img src="assets/img/footer5.jpg" class="img-fluid" alt=""></a>
                 </div>
                 <div class="col col-4">
-                  <a href="#"><img src="./assets/img/footer6.jpg" class="img-fluid" alt=""></a>
+                  <a href="#"><img src="assets/img/footer6.jpg" class="img-fluid" alt=""></a>
                 </div>
               </div>              
               <div class="row row-lg ft-box-img">
                 <div class="col col-4">
-                  <a href="#"><img src="./assets/img/footer7.jpg" class="img-fluid" alt=""></a>
+                  <a href="#"><img src="assets/img/footer7.jpg" class="img-fluid" alt=""></a>
                 </div>
                 <div class="col col-4">
-                  <a href="#"><img src="./assets/img/footer8.jpg" class="img-fluid" alt=""></a>
+                  <a href="#"><img src="assets/img/footer8.jpg" class="img-fluid" alt=""></a>
                 </div>
                 <div class="col col-4">
-                  <a href="#"><img src="./assets/img/footer9.jpg" class="img-fluid" alt=""></a>
+                  <a href="#"><img src="assets/img/footer9.jpg" class="img-fluid" alt=""></a>
                 </div>
               </div>
             </div>
