--- a/page_index_tour/Index-Tour1.html
+++ b/page_index_tour/Index-Tour1.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    </div>
     <!-- menu mobile -->
     <div id="main">
         <span style="font-size:30px;cursor:pointer" onclick="openNav()"><i class="fa-solid fa-bars"></i></span>
